--- a/src/components/Buttons/button.css
+++ b/src/components/Buttons/button.css
@@ -129,19 +129,23 @@
     }
   }
   .btn lottie-player{
-    width: 5vw;
-    position: absolute;
-    top: 0vw;
-    left: 3vw;
-  }
-  .buttonsFrontPage a:last-child .btn lottie-player{
     width: 7vw;
     height: 7vw;
+    position: absolute;
     top: -1vw;
-    left: 2.5vw;
+    left: 2vw;
+  }
+  .buttonsFrontPage a:last-child .btn lottie-player{
+    width: 9vw;
+    height: 9vw;
+    top: -2vw;
+    left: 1vw;
   }
   .buttonsFrontPage .btn{
-    width: 20vw;
+width: 20vw;
     height: 5vw;
     padding: 0 0 0 4vw;
+    background: linear-gradient(310deg, #f490ff, #be0786, #4eafff, #700099);
+    font-size: 1.5vw;
+    text-shadow: 0 3px black;
   }
